# biodivine-lib-io-bma

./: .gitignore  .releasenotes.yml  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
models/: readme.md
models/bbm-inputs-true/: 001.aeon  002.aeon  003.aeon  004.aeon  006.aeon  008.aeon  009.aeon  010.aeon  011.aeon  012.aeon  013.aeon  014.aeon  015.aeon  016.aeon  017.aeon  018.aeon  019.aeon  020.aeon  021.aeon  022.aeon  023.aeon  024.aeon  025.aeon  027.aeon  028.aeon  029.aeon  030.aeon  032.aeon  033.aeon  034.aeon  035.aeon  036.aeon  037.aeon  038.aeon  039.aeon  040.aeon  041.aeon  042.aeon  044.aeon  045.aeon  (+183 more)
models/json-export-from-repo/: 2var_unstable (1).json  Default Model.json  E coli Tarfunc.json  New Model.json  Resting Neuron.json  SSkin1D.json  SSkin1D_TF.json  SSkin1D_analysis_hang.json  SSkin2D_3cells_2layers.json  Skin1D (1).json  Skin1D_TF_analysis_hang.json  Skin2D_3cells_2layers.json  Skin2D_3cells_2layers_TF.json  Skin2D_3cells_2layers_TF_analysis_crash.json  Skin2D_5X2_TF.json  VPC_lin15ko.json  VerySmallTestCase.json  ion channel.json  model 1 (1).json  model 1.json
models/json-export-from-tool/: Activator-Inhibitor Oscillation.json  Homeostasis.json  Hyperbolic.json  Linear.json  Mutual Inhibition.json  Oscillatory negative feedback.json  Perfect Adaptation.json  Sigmoidal.json  Substrate depletion oscillations.json
src/: _impl_bma_model.rs  bma_model.rs  enums.rs  json_model.rs  lib.rs  traits.rs  utils.rs  validation.rs  xml_model.rs
src/data/: json_model.rs  mod.rs  quote_num.rs  xml_model.rs
src/data/json_model/: json_container.rs  json_layout.rs  json_layout_container.rs  json_layout_variable.rs  json_model.rs  json_network.rs  json_relationship.rs  json_variable.rs  mod.rs
src/model/: _impl_bma_model.rs  _impl_json_serde.rs  _impl_serde.rs  _impl_to_bn.rs  _impl_xml_serde.rs  bma_model.rs  bma_network.rs  bma_relationship.rs  bma_variable.rs  mod.rs
src/model/bma_model/: from_aeon.rs  from_bn.rs  into_aeon.rs  into_bn.rs  mod.rs
src/model/layout/: bma_layout.rs  bma_layout_container.rs  bma_layout_variable.rs  mod.rs
src/serde/: mod.rs  quote_num.rs  xml_model.rs
src/serde/json/: json_layout.rs  json_layout_container.rs  json_layout_variable.rs  json_model.rs  json_network.rs  json_relationship.rs  json_variable.rs  mod.rs
src/serde/xml/: mod.rs  xml_container.rs  xml_layout.rs  xml_lists.rs  xml_model.rs  xml_relationship.rs  xml_variable.rs
src/update_fn/: _impl_from_update_fn.rs  _impl_to_update_fn.rs  bma_fn_tree.rs  bma_fn_update.rs  enums.rs  expression_enums.rs  mod.rs  parser.rs  tokenizer.rs
src/update_function/: _impl_from_update_fn.rs  _impl_to_update_fn.rs  bma_expression_error.rs  bma_fn_update.rs  bma_update_function.rs  bma_update_function_error.rs  bma_update_function_evaluation.rs  expression_default_builder.rs  expression_enums.rs  expression_node_data.rs  expression_parser.rs  expression_token.rs  from_aeon.rs  into_aeon.rs  mod.rs  parser.rs  tokenizer.rs
