[package]
name = "biodivine-lib-io-bma"
version = "0.0.1"
authors = ["Ondřej Huvar <xhuvar@fi.muni.cz>", "Samuel Pastva <sam.pastva@gmail.com>"]
edition = "2024"
description = "Library for working with models in the BMA format."
homepage = "https://github.com/sybila/biodivine-lib-io-bma"
repository = "https://github.com/sybila/biodivine-lib-io-bma"
readme = "README.md"
keywords = ["boolean-network", "BMA", "systems-biology"]
categories = ["science", "simulation"]
license = "MIT"

[lib]
name = "biodivine_lib_io_bma"
path = "src/lib.rs"

[[bin]]
name = "load-json"
path = "src/bin/load_json.rs"

[[bin]]
name = "load-xml"
path = "src/bin/load_xml.rs"

[dependencies]
biodivine-lib-param-bn = ">=0.5.14, <1.0.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12.0"
serde-xml-rs = "0.8"
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
thiserror = "2.0"
rust_decimal = { version = "1.37", features = ["macros"] }
