[package]
name = "biodivine-lib-io-bma"
version = "0.1.0"
authors = ["Ondřej Huvar <xhuvar@fi.muni.cz>", "Samuel Pastva <sam.pastva@gmail.com>"]
edition = "2024"
description = "Library for working with models in the BMA format."
homepage = "https://github.com/sybila/biodivine-lib-io-bma"
repository = "https://github.com/sybila/biodivine-lib-io-bma"
readme = "README.md"
keywords = ["boolean-network", "BMA", "systems-biology"]
categories = ["science", "simulation"]
license = "MIT"
rust-version = "1.88.0"

[lib]
name = "biodivine_lib_io_bma"
path = "src/lib.rs"

[[bin]]
name = "load-json"
path = "src/bin/load_json.rs"

[[bin]]
name = "load-xml"
path = "src/bin/load_xml.rs"

[dependencies]
biodivine-lib-bdd = ">=0.6.1, <1.0.0"
biodivine-lib-param-bn = ">=0.6.1, <1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12.0"
serde-xml-rs = "0.8"
num-traits = "0.2"
thiserror = "2.0"
anyhow = "1.0"
rust_decimal = { version = "1.37", features = ["macros"] }
